--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "queue-management-system-ui",
-  "version": "1.0.1-rc.0",
+  "version": "0.1.2",
   "private": true,
   "scripts": {
     "dev": "next dev",
